--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <p>Number of guesses <span></span></p>
     <p>Try to guess this word</p>
     <output></output>
-    <script src="/js/functions.js"></script>
+    <script src="./js/functions.js"></script>
 </body>
 </html>
